--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "We've seen many different styles of form management by now -- simple to complex. Today we are going to unleash your inner form-wizard! 🧙",
   "main": "index.js",
   "scripts": {
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "cy": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "yup": "^0.29.0"
   },
   "devDependencies": {
+    "cypress": "^4.6.0",
     "parcel-bundler": "^1.12.4"
   }
 }
